--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</section>
 		<section class="news">
 			<p>Новое в нашем блоке</p>
-			<input type="Text" name="email"> <!--Забыл как подсказку указывать-->
+			<input type="Text" name="email" placeholder="Электронная почта">
 			<input type="submit" name="submit" value="Отправить">
 		</section>
 	</div>
