--- a/catalog.html
+++ b/catalog.html
@@ -50,19 +50,16 @@
 	<div class="selection-ice">
 		<form action="https://echo.htmlacademy.ru" method="post" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<label for="sorting">Сортировка</label>
-			<br>
 			<select name="sorting">
                 <option selected>по популярности</option>
                 <option>другое</option>
             </select>
-				<br>
 			<label for="rucount">Цена: 100 руб. - 500 руб.</label>
 				<br>
 				<input type="range" id="rucount" name="rucount" min="25" max="800" step="25">
 				<output name="ruoutput"></output>
 				<br>
 			<span>Жирность:</span>
-				<br>
 			<label>
 				<input type="radio" name="check-0" value="0">0%
 			</label>
@@ -96,68 +93,103 @@
 			<a href="#">Применить</a>
 		</form>
 	</div>
-	<div class="container">
+	<div class="goods">
 		<div class="catalog">
-			<div class="case1-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="200" height="50">
 				<b>310 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case2-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочно-кофейное с кусочками шоколада" width="200" height="50">
 				<b>380 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочно-кофейное с кусочками шоколада</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочно-кофейное с кусочками шоколада</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case3-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="200" height="50">
 				<b>355 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+				<div>
 				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case4-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочное крем-брюле с карамельной подливкой" width="200" height="50">
 				<b>415 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочное крем-брюле с карамельной подливкой</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case5-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочное с брусничным джемом" width="200" height="50">
 				<b>325 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочное с брусничным джемом</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочное с брусничным джемом</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case6-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочно-черничное с цельными ягодами черники" width="200" height="50">
 				<b>410 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочно-черничное с цельными ягодами черники</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочно-черничное с цельными ягодами черники</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case7-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочно-лимонное с карамельной присыпкой" width="200" height="50">
 				<b>375 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочно-лимонное с карамельной присыпкой</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочно-лимонное с карамельной присыпкой</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case8-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочное с шоколадной стружкой" width="200" height="50">
 				<b>320 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочное с шоколадной стружкой</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочное с шоколадной стружкой</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case9-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочно-ванильное с кусочками шоколада" width="200" height="50">
 				<b>440 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочно-ванильное с кусочками шоколада</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочно-ванильное с кусочками шоколада</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case10-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочное с ментоловым сиропом" width="200" height="50">
 				<b>435 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочное с ментоловым сиропом</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочное с ментоловым сиропом</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case11-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочное с кусочками черного шоколада" width="200" height="50">
 				<b>355 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочное с кусочками черного шоколада</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочное с кусочками черного шоколада</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
-			<div class="case12-catalog">
+			<div class="case-catalog">
 				<img src="#" alt="Сливочное с мятным сиропом" width="200" height="50">
 				<b>420 <!--Как знак рубля ставить?--> / кг</b>
-				<a href="#">Сливочное с мятным сиропом</a><!--Это ссылка или текст?-->
+				<a href="#">Сливочное с мятным сиропом</a>
+				<div>
+				<a href="#" class="fastsee">Быстрый просмотр</a>
+				</div>
 			</div>
 		</div>
 		<div class="catalog-pages">
@@ -188,7 +220,7 @@
 			</section>
 			<section class="footer-copyright">
 				<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a><!--Как символ вставить?-->2016</p>
+				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2016</p>
 			</section>
 		</div>
 	</footer>
