Добавил фалй ксс, стили и картинки

--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог товаров</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
   	<header class="main-header">
 		<div class="container">
 			<div class="header-logo">
-			  <img src="img/header-logo.png" width="205" height="55" alt="Барбершоп «Бородинский»">
+			  <img src="img/logo.png" width="205" height="55" alt="Глейси">
 			</div>
 			<nav class="main-navigation">
 			  <ul>
@@ -96,7 +97,7 @@
 	<div class="goods">
 		<div class="catalog">
 			<div class="case-catalog">
-				<img src="#" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="200" height="50">
+				<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<b>310 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 				<div>
@@ -104,7 +105,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочно-кофейное с кусочками шоколада" width="200" height="50">
+				<img src="img/ice_2.jpg" alt="Сливочно-кофейное с кусочками шоколада">
 				<b>380 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-кофейное с кусочками шоколада</a>
 				<div>
@@ -112,7 +113,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="200" height="50">
+				<img src="img/ice_3.jpg" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 				<b>355 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 				<div>
@@ -120,7 +121,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочное крем-брюле с карамельной подливкой" width="200" height="50">
+				<img src="img/ice_4.jpg" alt="Сливочное крем-брюле с карамельной подливкой">
 				<b>415 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное крем-брюле с карамельной подливкой</a>
 				<div>
@@ -128,7 +129,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочное с брусничным джемом" width="200" height="50">
+				<img src="img/ice_5.jpg" alt="Сливочное с брусничным джемом">
 				<b>325 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с брусничным джемом</a>
 				<div>
@@ -136,7 +137,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочно-черничное с цельными ягодами черники" width="200" height="50">
+				<img src="img/ice_6.jpg" alt="Сливочно-черничное с цельными ягодами черники">
 				<b>410 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-черничное с цельными ягодами черники</a>
 				<div>
@@ -144,7 +145,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочно-лимонное с карамельной присыпкой" width="200" height="50">
+				<img src="img/ice_7.jpg" alt="Сливочно-лимонное с карамельной присыпкой">
 				<b>375 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-лимонное с карамельной присыпкой</a>
 				<div>
@@ -152,7 +153,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочное с шоколадной стружкой" width="200" height="50">
+				<img src="img/ice_8.jpg" alt="Сливочное с шоколадной стружкой">
 				<b>320 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с шоколадной стружкой</a>
 				<div>
@@ -160,7 +161,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочно-ванильное с кусочками шоколада" width="200" height="50">
+				<img src="img/ice_9.jpg" alt="Сливочно-ванильное с кусочками шоколада">
 				<b>440 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-ванильное с кусочками шоколада</a>
 				<div>
@@ -168,7 +169,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочное с ментоловым сиропом" width="200" height="50">
+				<img src="img/ice_10.jpg" alt="Сливочное с ментоловым сиропом">
 				<b>435 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с ментоловым сиропом</a>
 				<div>
@@ -176,7 +177,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочное с кусочками черного шоколада" width="200" height="50">
+				<img src="img/ice_11.jpg" alt="Сливочное с кусочками черного шоколада">
 				<b>355 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с кусочками черного шоколада</a>
 				<div>
@@ -184,7 +185,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="#" alt="Сливочное с мятным сиропом" width="200" height="50">
+				<img src="img/ice_12.jpg" alt="Сливочное с мятным сиропом">
 				<b>420 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с мятным сиропом</a>
 				<div>
