--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Главная Gllacy</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
 	<header class="main-header">
 		<div class="container">
 			<div class="header-logo">
-			  <img src="img/header-logo.png" width="205" height="55" alt="Барбершоп «Бородинский»">
+			  <img src="img/logo.png" width="205" height="55" alt="Барбершоп «Бородинский»">
 			</div>
 			<nav class="main-navigation">
 			  <ul>
@@ -64,21 +65,25 @@
 	<div class="catalog">
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
+			<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 			<b>310 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
 		</section>	
 		<section class="catalog-ice">
 		<span class="tag">ХИТ</span> <!--tag бирка, ярлык, признак, этикетка, ушко, наконечник-->
+			<img src="img/ice_2.jpg" alt="Сливочно-кофейное с кусочками шоколада">
 			<b>318 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
+			<img src="img/ice_3.jpg" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 			<b>355 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочно-клубничное с присыпкой из белого шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
+			<img src="img/ice_4.jpg" alt="Сливочное крем-брюле с карамельной подливкой">
 			<b>415 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
 		</section>
@@ -98,18 +103,18 @@
 	</div>
 	<div class="news-sub">
 		<section class="news">
-			<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно=)</p>
+			<p>Новое в нашем блоке</p>
 			<a href="#">10 способов сервировки фруктовых щербетов к столу</a>
 		</section>
-		<section class="news">
-			<p>Новое в нашем блоке</p>
+		<section class="sub">
+			<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно=)</p>
 			<form>
 				<input type="Text" name="email" placeholder="Электронная почта">
 				<button name="send">Отправить</button>
 			</form>
 		</section>
 	</div>
-	<div class="driving-address">
+	<div class="driving-address" >
 		<section class="driving">
           Адрес главного офиса и<br>
 		  Офлайн магазина<br>
