--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+	<!--Блок шапки-->
 	<header class="main-header">
 		<div class="container">
 			<div class="header-logo">
 			  <img src="img/logo.png" width="205" height="55" alt="Барбершоп «Бородинский»">
 			</div>
 			<nav class="main-navigation">
-			  <ul>
+			  <ul class="main-navigation">
 				<li>
 				  <a href="#">Каталог</a>
 				</li>
@@ -35,6 +36,7 @@
 			</div>
 		</div>
 	</header>
+	<!--/Блок шапки-->
 	<div class="ad"><!--advertising реклама-->
 		<div class="choice-ice">
 			<h2>Крем-брюле и пломбир с малиновым джемом</h2>
@@ -126,13 +128,14 @@
           <a href="#">Форма обратной связи</a>
 		</section>
 	</div>
+	<!--Блок подвала-->
 	<footer>
 		<div class="container">
 			<section class="footer-social">
 				<a class="social-btn social-btn-inst" href="#">Твиттер</a>
-				<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-				<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-				<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+				<a class="social-btn social-btn-inst" href="https://instagram.com">Инстаграм</a>
+				<a class="social-btn social-btn-vk" href="https://vk.com">Вконтакте</a>
+				<a class="social-btn social-btn-fb" href="https://facebook.com">Фейсбук</a>
 			</section>
 			<section class="footer-contacts">
 				<ul>
@@ -148,5 +151,6 @@
 			</section>
 		</div>
 	</footer>
+	<!--/Блок подвала-->
   </body>
 </html>
