--- a/catalog.html
+++ b/catalog.html
@@ -52,6 +52,7 @@
 	</div>
 	<div class="selection-ice">
 		<form action="https://echo.htmlacademy.ru" method="post" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
+			<h2>Сливочное мороженное</h2>
 			<label for="sorting">Сортировка</label>
 			<select name="sorting">
                 <option selected>по популярности</option>
