--- a/catalog.html
+++ b/catalog.html
@@ -37,8 +37,8 @@
 		</div>
 	</header>
 	<!--Блок шапки-->
-	<div class="breadcrumbs">
-		<ul>
+	<div class="breadcrumbs container">
+		<ul class="main-nav">
 			<li>
 				<a href="#">Главная</a>
 			</li>
@@ -50,7 +50,7 @@
 			</li>
 		</ul>
 	</div>
-	<div class="selection-ice">
+	<div class="selection-ice container">
 		<form action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<h2>Сливочное мороженное</h2>
 			<label for="sorting">Сортировка</label>
@@ -97,7 +97,7 @@
 			<a href="#">Применить</a>
 		</form>
 	</div>
-	<div class="goods">
+	<div class="goods container clearfix">
 		<div class="catalog">
 			<div class="case-catalog">
 				<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
@@ -195,20 +195,20 @@
 				<a href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
-		</div>
-		<div class="catalog-pages">
-			<ul>
-				<li><a href"#">1</a></li>
-				<li><a href"#">2</a></li>
-				<li><a href"#">3</a></li>
-				<li><a href"#">4</a></li>
-				<li><a href"#">5</a></li>
-			</ul>
+			<div class="catalog-pages">
+				<ul>
+					<li><a href"#">1</a></li>
+					<li><a href"#">2</a></li>
+					<li><a href"#">3</a></li>
+					<li><a href"#">4</a></li>
+					<li><a href"#">5</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<!--Блок подвала-->
 	<footer>
-		<div class="container">
+		<div class="container clearfix">
 			<section class="footer-social">
 				<a class="social-btn social-btn-inst" href="#">Твиттер</a>
 				<a class="social-btn social-btn-inst" href="https://instagram.com">Инстаграм</a>
@@ -216,7 +216,7 @@
 				<a class="social-btn social-btn-fb" href="https://facebook.com">Фейсбук</a>
 			</section>
 			<section class="footer-contacts">
-				<ul>
+				<ul class="footer-main">
 					<li><a href="#">Для поставщиков</a></li>
 					<li><a href="#">О производстве</a></li>
 					<li><a href="#">Наши документы</a></li>
