--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<a class="login" href="#">Вход</a>
 				<a class="basket" href="#">Пусто</a>
 			</div>
-			<div class="timework-tel clearfix">
+			<div class="timework-tel">
 				<span class="timework">С 10 до 20, ежедневно</span><br>
 				<span class="tel">8 812 450-25-25</span>
 			</div>
@@ -51,15 +51,13 @@
 						<label for="btn-3"></label>
 					</div>
 					 <div class="slider-inner">
-                    <div class="slider-slides">
-                        <img src="img/advertising_1.png" alt="Кекс смотрит на еду">
-                        <img src="img/advertising_2.png" alt="Кекс смотрит на тебя">
-                        <img src="img/advertising_3.png" alt="Кекс не хочет никуда смотреть">
-                    </div>
-                </div>
-            </div>
-		</div>
-		
+						<div class="slider-slides">
+							<img src="img/advertising_1.png" alt="...">
+							<img src="img/advertising_2.png" alt="...">
+							<img src="img/advertising_3.png" alt="...">
+						</div>
+					</div>
+         </div>
 		<div class="agitation">
 			<a href="#">Давайте оба!</a>
 		</div>
