переназвал некоторые классы. в каталоге добавил контейнер к лерфиксом

--- a/catalog.html
+++ b/catalog.html
@@ -97,8 +97,8 @@
 			<a href="#">Применить</a>
 		</form>
 	</div>
-	<div class="goods container clearfix">
-		<div class="catalog">
+	<div class="goods">
+		<div class="catalog-cream container clearfix">
 			<div class="case-catalog">
 				<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<b>310 <!--Как знак рубля ставить?--> / кг</b>
