Разобрался со знаком вопроса

--- a/catalog.html
+++ b/catalog.html
@@ -107,9 +107,9 @@
 				<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<b>310 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-				<!--<div>
+				<div>
 				<a href="#" class="fastsee">Быстрый просмотр</a>
-				</div>-->
+				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_2.jpg" alt="Сливочно-кофейное с кусочками шоколада">
